--- a/package.json
+++ b/package.json
@@ -1,70 +1,50 @@
 {
-  "name": "rtttl-parse",
+  "name": "bluejay-rtttl-parse",
   "version": "0.0.0-development",
-  "description": "Parse Nokia Ring Tone Text Transfer Language (RTTTL)",
-  "main": "dist/index.js",
+  "description": "Nokia Ring Tone Text Transfer Language (RTTTL) <-> Bluejay ESC startup tunes conversion utility",
+  "main": "src/index.js",
   "scripts": {
     "commit": "git-cz",
-    "test": "mocha src/index.test.js -w",
-    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec src/index.test.js",
-    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "test": "mocha src/index.test.js",
+    "check-coverage": "nyc npm run test",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "build": "npm-run-all --parallel build:*",
-    "build:main": "babel --out-dir dist --ignore *.test.js src",
-    "build:umd": "webpack --output-filename index.umd.js",
-    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
-    "prebuild": "rimraf dist",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/adamonsoon/rtttl-parse.git"
+    "url": "https://github.com/saidinesh5/bluejay-rtttl-parse.git"
   },
   "keywords": [
+    "bluejay",
     "rtttl",
     "nokia"
   ],
   "files": [
-    "dist",
     "README.md"
   ],
-  "author": "Adam Rahwane <adam@produckt.co.il> (https://github.com/adamonsoon)",
+  "author": "Dinesh Manajipet <saidinesh5@gmail.com> (https://github.com/adamonsoon)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/adamonsoon/rtttl-parse/issues"
+    "url": "https://github.com/saidinesh5/bluejay-rtttl-parse/issues"
   },
-  "homepage": "https://github.com/adamonsoon/rtttl-parse#readme",
+  "homepage": "https://github.com/saidinesh5/bluejay-rtttl-parse#readme",
   "devDependencies": {
-    "babel-cli": "6.24.0",
-    "babel-loader": "6.4.1",
-    "babel-preset-es2015": "6.24.0",
-    "babel-preset-stage-2": "6.22.0",
     "chai": "3.5.0",
-    "codecov": "2.1.0",
+    "codecov": "3.8.1",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.0.0",
-    "ghooks": "2.0.0",
-    "istanbul": "0.4.5",
-    "json-loader": "0.5.4",
+    "ghooks": "2.0.4",
     "mocha": "3.2.0",
-    "npm-run-all": "4.0.2",
-    "rimraf": "2.6.1",
-    "semantic-release": "^6.3.2",
-    "sinon": "2.1.0",
-    "webpack": "2.3.2"
+    "nyc": "15.1.0",
+    "semantic-release": "^17.4.2",
+    "sinon": "^10.0.0"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test:single && npm run check-coverage"
+      "pre-commit": "npm run test && npm run check-coverage"
     }
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-2"
-    ]
   }
 }
