Generate coverage report and print to console.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "commit": "git-cz",
     "test": "mocha src/index.test.js --require esm",
-    "check-coverage": "nyc npm run test",
+    "check-coverage": "c8 --reporter=text --reporter=lcov npm run test",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/saidinesh5/bluejay-rtttl-parse#readme",
   "devDependencies": {
+    "c8": "^7.6.0",
     "chai": "3.5.0",
     "codecov": "3.8.1",
     "commitizen": "2.9.6",
@@ -37,7 +38,6 @@
     "esm": "^3.2.25",
     "ghooks": "2.0.4",
     "mocha": "3.2.0",
-    "nyc": "15.1.0",
     "semantic-release": "^17.4.2",
     "sinon": "^10.0.0"
   },
