--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run test && npm run check-coverage"
+      "pre-commit": "npm run check-coverage"
     }
   }
 }
