--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha src/index.test.js --require esm",
     "check-coverage": "c8 --reporter=text --reporter=lcov npm run test",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "lint": "eslint src/index.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "codecov": "3.8.1",
     "commitizen": "2.9.6",
     "cz-conventional-changelog": "2.0.0",
+    "eslint": "^7.23.0",
     "esm": "^3.2.25",
     "ghooks": "2.0.4",
     "mocha": "3.2.0",
@@ -46,7 +48,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run check-coverage"
+      "pre-commit": "npm run lint && npm run check-coverage"
     }
   }
 }
