Update the package.json and commit package-lock.json

--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "c8": "^7.6.0",
     "chai": "3.5.0",
     "codecov": "3.8.1",
-    "commitizen": "2.9.6",
+    "commitizen": "^4.2.3",
     "cz-conventional-changelog": "2.0.0",
     "eslint": "^7.23.0",
     "esm": "^3.2.25",
     "ghooks": "2.0.4",
-    "mocha": "3.2.0",
+    "mocha": "^8.3.2",
     "semantic-release": "^17.4.2",
     "sinon": "^10.0.0"
   },
